--- a/style.css
+++ b/style.css
@@ -1,3 +1,92 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
+
+*{
+    margin: 0;
+}
+header{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8) ;
+}
+
+.img-wrapper img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 20s;
+}
+@keyframes zoom
+{
+  0%
+  {
+    transform: scale(1.2);
+  }
+  100%
+  {
+      transform: scale(1);
+  }
+}
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1
+{
+    color: rgb(255, 255, 255);
+    font-size: 3rem;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+    animation: moveBanner  1s;
+}
+.banner p
+{
+    font-family: "Josefin Slab", serif;
+    color: rgba(255, 255, 255, 1);
+    font-size: 2rem;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
+    margin-bottom: 2rem;
+    animation: moveBanner  1.5s;
+}
+
+.banner button
+{
+   font-family: "Muli",serif;
+   color: rgba(255, 255, 255, 1);
+   letter-spacing: .1rem;
+   text-transform: uppercase;
+   background: #000046;  
+   background: -webkit-linear-gradient(to top, #1CB5E0, #000046);  
+   background: linear-gradient(to top, #1CB5E0, #000046); 
+   padding: 1rem 3rem; /* primeiro valor em cima e em baixo, segundo valor nas laterais*/
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+   animation: moveBanner 2s;
+}
+@keyframes moveBanner
+{
+    0%
+    {
+      transform: translateY(20rem) rotateY(-30deg);
+      opacity: 0;
+    }
+    100%
+    {
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
