--- a/style.css
+++ b/style.css
@@ -4,14 +4,92 @@
 
 *{
     margin: 0;
+    list-style-type: none;
+    text-decoration: none;
 }
-header{
+:root
+{
+--font-primary:"Baloo Da 2", serif;
+--font-secondary:"Josefin Slab", serif;
+--font-action: "Muli",serif;
+}
+.hamburguer
+{
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburguer
+{
+    right: 16rem;
+}
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color:#ffffff;
+    box-shadow: .2rem .2rem 1px rgba(0, 0, 0, 0.4);
+    transition: transform .2s;
+}
+.show-menu #line1
+{
+   transform: rotate(45deg)translate(.4rem, .5rem);
+}
+.show-menu #line2
+{
+    opacity: 0;
+    visibility: hidden;
+}
+.show-menu #line3
+{
+   transform: rotate(-45deg) translate(-.2rem, -.3rem);  
+}
+.hamburguer span
+{
+   position: absolute;
+   background-color: #000046;
+   width: 5rem;
+   height: 2rem;
+   left: 3rem;
+   top: .3rem;
+   display: flex;
+   justify-content: center; /*centraliza na horizontal*/
+   align-items: center;  /*centraliza na vertical*/
+   font-family: var(--font-action);
+   color: rgb(255, 255, 255);
+   opacity: 0;
+   transition: opacity .5s;
+}
+.hamburguer span::before
+{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #000046;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+.show-menu .hamburguer:hover span
+{
+    opacity: 1;
+}
+header
+{
     position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
-.img-wrapper{
+.img-wrapper
+{
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -54,7 +132,7 @@ header{
 }
 .banner p
 {
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secondary);
     color: rgba(255, 255, 255, 1);
     font-size: 2rem;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
@@ -64,7 +142,7 @@ header{
 
 .banner button
 {
-   font-family: "Muli",serif;
+   font-family:var (--font-action);
    color: rgba(255, 255, 255, 1);
    letter-spacing: .1rem;
    text-transform: uppercase;
@@ -89,4 +167,67 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+.sidebar{
+  background-color: #ffffff;
+  width: 20rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity .5s;
+  /*right: -20rem*/
+}
+.show-menu .sidebar
+{
+ opacity: 1;
+ /*right: 20rem*/
+}
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);/*Modifica a posiçao do menu centralizando seus eixos*/
+}
+.menu-item
+{ /*sao as li */
+    text-align: center; /*alinha o texto ao centro*/
+    margin-bottom: .3rem;
+}
+.menu-link
+{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #000046;
+    transition: color .5s;
+    transition: font-size .5s;
+}
+.menu-link:hover
+{
+    color: #1CB5E0;
+    font-size: 2.3rem;
+}
+.social-media
+{
+position: absolute;
+width: 100%;
+bottom: 2rem;
+left: 1rem;
+display: flex;
+justify-content: space-evenly;
+}
+.social-media i
+{
+font-size: 2rem;
+color: #000046;
+align-items: center;
+border-radius: 50%;
+transition: color .5s;
+transition: font-size .5s;
+}
+.social-media i:hover
+{
+font-size: 2.3rem;
+color: #1CB5E0;
 }
