--- a/style.css
+++ b/style.css
@@ -272,6 +272,18 @@ color: #1CB5E0;
 {
     background-color: #f5f5f5;
 }
+.conhecimento-img-wrapper
+{
+    width: 28rem;
+    height: 28rem;
+    grid-column: 8/6;
+    grid-row: 1/3;
+    
+}
+.conhecimento-img-wrapper img{
+    width: 100%;
+    height: 100%;
+}
 .sessao-header
 {
     display: flex;
@@ -302,3 +314,101 @@ color: #1CB5E0;
     font-family: var(--font-secondary);
     margin-top: 1rem;
 }
+.projetos
+{
+display: flex;
+justify-content: space-evenly; /*espalha os objetos igualmente*/
+}
+.sessao-header-card
+{
+    width: 8rem;
+    margin-left: 45%;
+    
+}
+.sessao-header-card h1
+{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    
+}
+.card
+{
+position: relative;
+width: 18rem;
+height: 25rem;
+}
+.card-img-wrapper
+{
+width: 100%;
+height: 100%;
+background-color: #000046;
+border-radius: .5rem;
+}
+.card-img-wrapper img
+{
+object-fit: cover;
+width: 100%;
+height: 100%;
+border-radius: .5rem;
+opacity: .9;
+}
+.card:hover .card-img-wrapper img
+{
+    opacity: .4;
+}
+.card-info
+{
+position: absolute;
+bottom: 0;
+margin: 2rem;
+text-shadow: .5rem .2rem .8rem rgba(0, 0, 0, 0.9);
+opacity: 0;
+visibility: hidden;
+transition: all 1s;
+}
+
+.card-info h2
+{
+font-family: var(--font-primary);
+font-size: 2rem;
+font-weight: 500;
+color: #eee;
+}
+
+.card-info h3
+{
+font-family: var(--font-secondary);
+font-weight: 500;
+color:#ffffff;
+margin-bottom: 1.5rem;
+}
+.card-info p
+{
+font-family: var(--font-secondary);
+font-weight: 400;
+font-size: 1.2rem;
+color:#eee;
+margin-bottom: 1.5rem;
+}
+
+.card-info button
+{
+    font-family:var (--font-action);
+    color: rgba(255, 255, 255, 1);
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    background: #000046;  
+    background: -webkit-linear-gradient(to top, #1CB5E0, #000046);  
+    background: linear-gradient(to top, #1CB5E0, #000046); 
+    padding: .8rem 2rem; /* primeiro valor em cima e em baixo, segundo valor nas laterais*/
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: .3rem .4rem .8rem rgba(0, 0, 0, 0.8);
+}
+ .card:hover .card-info
+ {
+    animation: moveBanner 1s;
+    opacity: 1;
+    visibility: visible;
+ }
