--- a/style.css
+++ b/style.css
@@ -1,414 +1,353 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 
-*{
+* {
     margin: 0;
     list-style-type: none;
     text-decoration: none;
 }
-:root
-{
---font-primary:"Baloo Da 2", serif;
---font-secondary:"Josefin Slab", serif;
---font-action: "Muli",serif;
-}
-.hamburguer
-{
-    width: 2rem;
-    height: 2rem;
-    position: fixed;
-    z-index: 100;
-    right: 2rem;
-    top: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    cursor: pointer;
+
+:root {
+    --font-primary: "Baloo Da 2", serif;
+    --font-secondary: "Josefin Slab", serif;
+    --font-action: "Muli", serif;
 }
 
-.show-menu .hamburguer
-{
-    right: 16rem;
-}
-.line{
+.line {
     width: 100%;
     height: .1rem;
-    background-color:#ffffff;
+    background-color: #ffffff;
     box-shadow: .2rem .2rem 1px rgba(0, 0, 0, 0.4);
     transition: transform .2s;
 }
-.show-menu #line1
-{
-   transform: rotate(45deg)translate(.4rem, .5rem);
+
+.top-bar {
+    background-color: black;
+    height: 3rem;
 }
-.show-menu #line2
-{
-    opacity: 0;
-    visibility: hidden;
+
+.top-bar p {
+    color: #f5f5f5;
+    font-family: var(--font-secondary);
+    margin-top: -2rem;
+    margin-right: 3rem;
+    text-align: end;
 }
-.show-menu #line3
-{
-   transform: rotate(-45deg) translate(-.2rem, -.3rem);  
+
+.logo {
+    width: 3rem;
+    height: 3rem;
+    margin-left: 3rem;
 }
-.hamburguer span
-{
-   position: absolute;
-   background-color: #000046;
-   width: 5rem;
-   height: 2rem;
-   left: 3rem;
-   top: .3rem;
-   display: flex;
-   justify-content: center; /*centraliza na horizontal*/
-   align-items: center;  /*centraliza na vertical*/
-   font-family: var(--font-action);
-   color: rgb(255, 255, 255);
-   opacity: 0;
-   transition: opacity .5s;
-}
-.hamburguer span::before
-{
-    content: "";
-    position: absolute;
-    border-right: .5rem solid #000046;
-    border-top: .5rem solid transparent;
-    border-left: .5rem solid transparent;
-    border-bottom: .5rem solid transparent;
-    left: -1rem;
-}
-.show-menu .hamburguer:hover span
-{
-    opacity: 1;
-}
-header
-{
-    position: relative;
+
+header {
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
-.img-wrapper
-{
+
+.img-wrapper {
     width: 100%;
-    height: 100%;
+    height: 87%;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.8) ;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
-.img-wrapper img
-{
+.img-wrapper img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
     animation: zoom 20s;
 }
-@keyframes zoom
-{
-  0%
-  {
-    transform: scale(1.2);
-  }
-  100%
-  {
-      transform: scale(1);
-  }
+
+@keyframes zoom {
+    0% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
-.banner{
+
+.banner {
     position: absolute;
     top: 30%;
     left: 15%;
 }
 
-.banner h1
-{
+.banner h1 {
     color: rgb(255, 255, 255);
     font-size: 3rem;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
     line-height: 3.5rem;
     margin-bottom: 2rem;
-    animation: moveBanner  1s;
+    animation: moveBanner 1s;
 }
-.banner p
-{
+
+.banner p {
     font-family: var(--font-secondary);
     color: rgba(255, 255, 255, 1);
     font-size: 2rem;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
     margin-bottom: 2rem;
-    animation: moveBanner  1.5s;
+    animation: moveBanner 1.5s;
 }
 
-.banner button
-{
-   font-family:var (--font-action);
-   color: rgba(255, 255, 255, 1);
-   letter-spacing: .1rem;
-   text-transform: uppercase;
-   background: #000046;  
-   background: -webkit-linear-gradient(to top, #1CB5E0, #000046);  
-   background: linear-gradient(to top, #1CB5E0, #000046); 
-   padding: 1rem 3rem; /* primeiro valor em cima e em baixo, segundo valor nas laterais*/
-   border: none;
-   border-radius: 5px;
-   cursor: pointer;
-   animation: moveBanner 2s;
+.banner button {
+    font-family: var (--font-action);
+    color: rgba(255, 255, 255, 1);
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    background: #000046;
+    background: -webkit-linear-gradient(to top, #1CB5E0, #000046);
+    background: linear-gradient(to top, #1CB5E0, #000046);
+    padding: 1rem 3rem;
+    /* primeiro valor em cima e em baixo, segundo valor nas laterais*/
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    animation: moveBanner 2s;
 }
-@keyframes moveBanner
-{
-    0%
-    {
-      transform: translateY(20rem) rotateY(-30deg);
-      opacity: 0;
+
+@keyframes moveBanner {
+    0% {
+        transform: translateY(20rem) rotateY(-30deg);
+        opacity: 0;
     }
-    100%
-    {
+
+    100% {
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
 }
-.sidebar{
-  background-color: #ffffff;
-  width: 20rem;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  right: 0;
-  opacity: 0;
-  transition: opacity .5s;
-  /*right: -20rem*/
+
+.menu-link:hover {
+    color: #1CB5E0;
 }
-.show-menu .sidebar
-{
- opacity: 1;
- /*right: 20rem*/
+
+.social-media {
+    width: 100%;
+    bottom: 2rem;
+    display: flex;
+    justify-content: space-evenly;
 }
-.menu{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);/*Modifica a posiçao do menu centralizando seus eixos*/
-}
-.menu-item
-{ /*sao as li */
-    text-align: center; /*alinha o texto ao centro*/
-    margin-bottom: .3rem;
-}
-.menu-link
-{
-    font-family: var(--font-action);
+
+.social-media i {
     font-size: 2rem;
-    color: #000046;
+    color: #000000;
+    align-items: center;
+    border-radius: 50%;
     transition: color .5s;
     transition: font-size .5s;
 }
-.menu-link:hover
-{
-    color: #1CB5E0;
-    font-size: 2.3rem;
+
+.social-media i:hover {
+    color: #333333;
 }
-.social-media
-{
-position: absolute;
-width: 100%;
-bottom: 2rem;
-left: 1rem;
-display: flex;
-justify-content: space-evenly;
+
+.about-me-sessao {
+    width: 100vw;
+    height: 15rem;
+    margin-bottom: 11rem;
 }
-.social-media i
-{
-font-size: 2rem;
-color: #000046;
-align-items: center;
-border-radius: 50%;
-transition: color .5s;
-transition: font-size .5s;
+
+.sessao-header-about-me {
+    display: flex;
+    align-items: center;
+    /*h1-centraliza-elemento vertical*/
+    justify-content: center;
+    /*torna o elemento horizontal*/
+    background-color: #000000;
+    margin-bottom: 3.5rem;
+    margin-top: -5.7rem;
 }
-.social-media i:hover
-{
-font-size: 2.3rem;
-color: #1CB5E0;
+
+.sessao-header-about-me h1 {
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    color: #f5f5f5;
 }
-.conhecimentos
-{
-    display: grid;
+
+.about-me-filho {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin-bottom: 5rem;
+    align-items: center;
+    /*h1-centraliza-elemento vertical*/
+    justify-content: center;
+    /*torna o elemento horizontal*/
+}
+
+.me {
+    width: 17rem;
+    height: 17rem;
+    margin-left: 10rem;
+    margin-right: 5rem;
+}
+
+.about-me-text {
+    width: 70%;
+}
+
+.conhecimentos {
+    display: flex;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(6, 6rem);
     row-gap: .2rem;
 }
-.conhecimento:nth-child(1)
-{
-    grid-column: 4/7;
-    grid-row: 1/3;
+
+.sessao-conhecimentos {
+    width: 100%;
+    height: 100vh;
 }
-.conhecimento:nth-child(2)
-{
-    grid-column: 3/6;
-    grid-row: 3/5;
+
+.coluna1 {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10rem;
+    padding-right: 5rem;
 }
-.conhecimento:nth-child(3)
-{
-    grid-column: 4/7;
-    grid-row: 5/-1;
+
+.coluna2 {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 5rem;
+    padding-right: 10rem;
 }
-.conhecimento:nth-child(4)
-{
-    grid-column: 11/14;
-    grid-row: 1/3;
-}
-.conhecimento:nth-child(5)
-{
-    grid-column: 12/15;
-    grid-row: 3/5;
-}
-.conhecimento:nth-child(6)
-{
-    grid-column: 11/14;
-    grid-row: 5/-1;
-}
-.sessao-conhecimentos
-{
-    background-color: #f5f5f5;
-}
-.conhecimento-img-wrapper
-{
-    width: 28rem;
-    height: 28rem;
-    grid-column: 8/6;
-    grid-row: 1/3;
-    
-}
-.conhecimento-img-wrapper img{
+
+.features-area {
     width: 100%;
     height: 100%;
 }
-.sessao-header
-{
-    display: flex;
-    align-items: center;  /*h1-centraliza-elemento vertical*/
-    justify-content: center; /*torna o elemento horizontal*/
+
+.conhecimento:nth-child(1) {
+    margin-bottom: 5rem;
 }
-.sessao-header h1
-{
-    font-family: var(--font-primary);
-    font-size: 2rem;
+
+.conhecimento:nth-child(2) {
+    margin-bottom: 5rem;
+}
+
+.conhecimento:nth-child(3) {
+    margin-bottom: 5rem;
+}
+
+.conhecimento:nth-child(4) {
+    margin-bottom: 5rem;
+}
+
+.conhecimento:nth-child(5) {
+    margin-bottom: 5rem;
+}
+
+.conhecimento:nth-child(6) {
+    margin-bottom: 5rem;
+}
+
+.sessao-conhecimentos {
     background-color: #f5f5f5;
 }
-.conhecimento-header
-{
+
+.sessao-header {
+    display: flex;
+    align-items: center;
+    /*h1-centraliza-elemento vertical*/
+    justify-content: center;
+    /*torna o elemento horizontal*/
+    background-color: #000000;
+    margin-bottom: 1.5rem;
+}
+
+.sessao-header h1 {
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    color: #f5f5f5;
+}
+
+.conhecimento-header {
     display: flex;
     align-items: center;
 }
-.conhecimento-header i{
+
+.conhecimento-header i {
     font-size: 2.5rem;
 }
-.conhecimento-header h3
-{
+
+.conhecimento-header h3 {
     font-family: var(--font-secondary);
     padding-left: 1rem;
 }
-.conhecimento-text
-{
+
+.conhecimento-text {
     font-family: var(--font-secondary);
     margin-top: 1rem;
+    font-weight: bold;
 }
-.projetos
-{
-display: flex;
-justify-content: space-evenly; /*espalha os objetos igualmente*/
+
+.projetos {
+    display: flex;
+    justify-content: space-evenly;
+    /*espalha os objetos igualmente*/
 }
-.sessao-header-card
-{
-    width: 8rem;
-    margin-left: 45%;
-    
+
+.sessao-header-card {
+    display: flex;
+    align-items: center;
+    /*h1-centraliza-elemento vertical*/
+    justify-content: center;
+    /*torna o elemento horizontal*/
+    background-color: #000000;
+    margin-bottom: 3.5rem;
 }
-.sessao-header-card h1
-{
+
+
+.sessao-header-card h1 {
     font-family: var(--font-primary);
     font-size: 2rem;
-    
-}
-.card
-{
-position: relative;
-width: 18rem;
-height: 25rem;
-}
-.card-img-wrapper
-{
-width: 100%;
-height: 100%;
-background-color: #000046;
-border-radius: .5rem;
-}
-.card-img-wrapper img
-{
-object-fit: cover;
-width: 100%;
-height: 100%;
-border-radius: .5rem;
-opacity: .9;
-}
-.card:hover .card-img-wrapper img
-{
-    opacity: .4;
-}
-.card-info
-{
-position: absolute;
-bottom: 0;
-margin: 2rem;
-text-shadow: .5rem .2rem .8rem rgba(0, 0, 0, 0.9);
-opacity: 0;
-visibility: hidden;
-transition: all 1s;
+    color: #f5f5f5;
 }
 
-.card-info h2
-{
-font-family: var(--font-primary);
-font-size: 2rem;
-font-weight: 500;
-color: #eee;
+.projets-video {
+    display: flex;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
-.card-info h3
-{
-font-family: var(--font-secondary);
-font-weight: 500;
-color:#ffffff;
-margin-bottom: 1.5rem;
-}
-.card-info p
-{
-font-family: var(--font-secondary);
-font-weight: 400;
-font-size: 1.2rem;
-color:#eee;
-margin-bottom: 1.5rem;
+.project-text {
+    font-family: var(--font-secondary);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 3rem;
 }
 
-.card-info button
-{
-    font-family:var (--font-action);
-    color: rgba(255, 255, 255, 1);
-    letter-spacing: .1rem;
-    text-transform: uppercase;
-    background: #000046;  
-    background: -webkit-linear-gradient(to top, #1CB5E0, #000046);  
-    background: linear-gradient(to top, #1CB5E0, #000046); 
-    padding: .8rem 2rem; /* primeiro valor em cima e em baixo, segundo valor nas laterais*/
-    border: none;
+.project-text h3 {
+    font-family: var(--font-primary);
+    margin-bottom: 1rem;
+}
+.video-sessao{
+    width: 520px;
+    height: 280px;
+    margin-bottom: 3rem;
+    margin-right:  2rem;
+}
+.button-link{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-top: 3rem;
+    background-color: #f5f5f5;
+    border: solid #000000;
     border-radius: 5px;
-    cursor: pointer;
-    box-shadow: .3rem .4rem .8rem rgba(0, 0, 0, 0.8);
+    text-decoration: none;
+    color: #000000;
+    font-family: var(--font-secondary);
 }
- .card:hover .card-info
- {
-    animation: moveBanner 1s;
-    opacity: 1;
-    visibility: visible;
- }
+
