--- a/style.css
+++ b/style.css
@@ -127,26 +127,6 @@ header {
     color: #1CB5E0;
 }
 
-.social-media {
-    width: 100%;
-    bottom: 2rem;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.social-media i {
-    font-size: 2rem;
-    color: #000000;
-    align-items: center;
-    border-radius: 50%;
-    transition: color .5s;
-    transition: font-size .5s;
-}
-
-.social-media i:hover {
-    color: #333333;
-}
-
 .about-me-sessao {
     width: 100vw;
     height: 15rem;
@@ -333,13 +313,29 @@ header {
     font-family: var(--font-primary);
     margin-bottom: 1rem;
 }
-.video-sessao{
-    width: 520px;
-    height: 280px;
+
+.video-sessao1 {
+    width: 80rem;
+    height: 20rem;
     margin-bottom: 3rem;
-    margin-right:  2rem;
+    margin-right: 2rem;
 }
-.button-link{
+
+.video-sessao2 {
+    width: 105rem;
+    height: 20rem;
+    margin-bottom: 3rem;
+    margin-right: 2rem;
+}
+
+.video-sessao3 {
+    width: 65rem;
+    height: 20rem;
+    margin-bottom: 3rem;
+    margin-right: 2rem;
+}
+
+.button-link {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     margin-top: 3rem;
@@ -351,3 +347,46 @@ header {
     font-family: var(--font-secondary);
 }
 
+.social-media {
+    width: 100%;
+    bottom: 2rem;
+    text-align: center;
+}
+
+.social-media i {
+    font-size: 2rem;
+    color: #000000;
+    align-items: center;
+    border-radius: 50%;
+    transition: color .5s;
+    transition: font-size .5s;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.social-media i:hover{
+    color: #333333;
+}
+
+.social-media img {
+    font-size: 2rem;
+    color: #000000;
+    align-items: center;
+    transition: color .5s;
+    transition: font-size .5s;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+.session-footer{
+    width: 100%;
+    height: 10vh;
+    background-color: #000000;
+    margin-top: 3rem;
+    text-align: center;
+    padding-top: 5rem;
+}
+
+.session-footer h3{
+    color: #f5f5f5;
+    font-family: var(--font-secondary);
+}
