--- a/style.css
+++ b/style.css
@@ -446,8 +446,26 @@ header {
     }
 }
 @media screen and (max-width: 580px) {
+    .banner {
+        left: 7%;
+    }
+    .top-bar p {
+      font-size: 0.7rem;
+    }
+    .banner h1 {
+        font-size: 1.5rem;
+    }
+    .banner p {
+        font-size: 1rem;
+    }
+    .about-me-filho {
+    margin-left: -4.5rem;
+    }
     .projets-video {
         padding-left: 2rem;
         padding-right: 1rem;
+    }
+    .img-wrapper {
+        height: 86%;
     }
 }
