--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --font-primary: "Baloo Da 2", serif;
     --font-secondary: "Josefin Slab", serif;
     --font-action: "Muli", serif;
+    margin-left: -5rem;
 }
 
 .line {
@@ -24,6 +25,7 @@
 .top-bar {
     background-color: black;
     height: 3rem;
+    margin-left: 5rem;
 }
 
 .top-bar p {
@@ -142,6 +144,7 @@ header {
     background-color: #000000;
     margin-bottom: 3.5rem;
     margin-top: -5.7rem;
+    margin-left: 5rem;
 }
 
 .sessao-header-about-me h1 {
@@ -158,6 +161,7 @@ header {
     /*h1-centraliza-elemento vertical*/
     justify-content: center;
     /*torna o elemento horizontal*/
+    margin-left: 5rem;
 }
 
 .me {
@@ -203,6 +207,7 @@ header {
 .features-area {
     width: 100%;
     height: 100%;
+    margin-left: 2.5rem;
 }
 
 .conhecimento:nth-child(1) {
@@ -236,11 +241,13 @@ header {
 .sessao-header {
     display: flex;
     align-items: center;
+    width: 100%;
     /*h1-centraliza-elemento vertical*/
     justify-content: center;
     /*torna o elemento horizontal*/
     background-color: #000000;
     margin-bottom: 1.5rem;
+    margin-left: 5rem;
 }
 
 .sessao-header h1 {
@@ -278,11 +285,13 @@ header {
 .sessao-header-card {
     display: flex;
     align-items: center;
+    width: 100%;
     /*h1-centraliza-elemento vertical*/
     justify-content: center;
     /*torna o elemento horizontal*/
     background-color: #000000;
     margin-bottom: 3.5rem;
+    margin-left: 5rem;
 }
 
 
@@ -290,6 +299,10 @@ header {
     font-family: var(--font-primary);
     font-size: 2rem;
     color: #f5f5f5;
+}
+
+.section-project{
+margin-left: 7rem;
 }
 
 .projets-video {
@@ -349,6 +362,7 @@ header {
     width: 100%;
     bottom: 2rem;
     text-align: center;
+    margin-left: 5rem;
 }
 
 .social-media i {
@@ -383,6 +397,7 @@ header {
     margin-top: 3rem;
     text-align: center;
     padding-top: 5rem;
+    margin-left: 4rem;
 }
 
 .session-footer h3 {
@@ -439,32 +454,40 @@ header {
         padding-right: 5rem;
     }
 }
+
 @media screen and (max-width: 580px) {
     .projets-video {
         padding-left: 2rem;
         padding-right: 2rem;
     }
 }
+
 @media screen and (max-width: 580px) {
     .banner {
         left: 4%;
     }
+
     .top-bar p {
-      font-size: 0.7rem;
+        font-size: 0.7rem;
     }
+
     .banner h1 {
         font-size: 1.5rem;
     }
+
     .banner p {
         font-size: 1rem;
     }
+
     .about-me-filho {
-    margin-left: -4.5rem;
+        margin-left: 1.5rem;
     }
+
     .projets-video {
         padding-left: 2rem;
         padding-right: 1rem;
     }
+
     .img-wrapper {
         height: 86%;
     }
