--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 
-body, html{
+body{
     overflow-x: hidden
 }
 
@@ -419,8 +419,8 @@ header {
 }
 
 @media screen and (max-width: 786px) {
-    body, html{
-        overflow-x: hidden !important;
+    body{
+        overflow-x: hidden;
     }
     .about-me-filho {
         display: block;
