--- a/style.css
+++ b/style.css
@@ -335,6 +335,7 @@ header {
 }
 
 .button-link {
+    max-width: 700px;
     min-width: 500px;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
