--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header {
 
 .img-wrapper {
     width: 100%;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, .95);
 }
 
 .img-wrapper img {
@@ -104,7 +104,7 @@ header {
 .banner h1 {
     color: var(--white-200);
     font-size: 3rem;
-    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.8);
     line-height: 3.5rem;
     margin-bottom: 2rem;
     animation: moveBanner 1s;
@@ -115,7 +115,7 @@ header {
     font-family: var(--font-secondary);
     color: var(--white-200);
     font-size: 2rem;
-    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.4);
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, 0.8);
     margin-bottom: 2rem;
     animation: moveBanner 1.5s;
 }
@@ -560,6 +560,6 @@ header {
 
 @media screen and (max-width: 400px) {
     .banner {
-       top: 10%;
+       top: 15%;
        left: -.25rem;
     }
