--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@
 }
 
 header {
+    position: relative;
     width: 100wv;
     max-height: 120vh;
     overflow: hidden;
@@ -96,7 +97,8 @@ header {
 
 .banner {
     position: absolute;
-    top: 40%;
+    width: 100%;
+    top: 20%;
     left: 15%;
     z-index: 1;
 }
@@ -182,19 +184,16 @@ header {
 
 .about-me-filho {
     width: 100%;
-    display: flex;
-    margin-bottom: 5rem;
-    align-items: center;
-    /*h1-centraliza-elemento vertical*/
-    justify-content: center;
-    /*torna o elemento horizontal*/
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 4rem 0rem;
 }
 
 .me {
     width: 17rem;
     height: 17rem;
-    margin-left: 10rem;
-    margin-right: 5rem;
+    margin: 0rem 3rem 0rem 20%;
 }
 
 .about-me-text {
@@ -214,6 +213,9 @@ header {
             var(--blue-200),
             var(--blue-100),
             var(--blue-200));
+    border-top: 40px solid #000000;
+    border-image-source: url("./img/img/Border-medio-top.png");
+    border-image-slice: 50;        
 }
 
 .coluna1 {
@@ -226,6 +228,9 @@ header {
 
 .features-area {
     width: 100%;
+    border-bottom: 40px solid #000000;
+    border-image-source: url("./img/img/Border-medio-botton.png");
+    border-image-slice: 50;
 }
 
 .conhecimento:nth-child(1) {
@@ -439,6 +444,9 @@ header {
 }
 
 @media screen and (max-width: 850px) {
+    .banner{
+        left: 5%;
+    }
     .projets-video {
         flex-direction: column;
         padding-left: 5rem;
@@ -477,25 +485,38 @@ header {
     }
 
     .banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         top: 30%;
+        left: 0%;
+        text-align: center;
+        justify-content: center;
     }
 
     .about-me-filho {
-        display: block;
+        flex-direction: column;
         text-align: center;
+        margin-left: 0rem;
+        padding: 2rem 0rem 2rem 7rem;
     }
 
     .me {
         width: 10rem;
         height: 10rem;
-    }
-
-    .about-me-filho p {
-        margin-left: 7rem;
+        margin-left: -20%;
     }
 
     .conhecimentos {
         display: block;
+    }
+
+    .sessao-conhecimentos {
+        border-image-source: url("./img/img/Border-medio-top-menor.png");  
+    }
+
+    .features-area {
+        border-image-source: url("./img/img/Border-medio-botton-menor.png");
     }
 
     .coluna1 {
@@ -523,12 +544,7 @@ header {
     }
 
     .banner {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         top: 20%;
-        text-align: center;
-        justify-content: center;
     }
 
     .top-bar p {
@@ -544,10 +560,6 @@ header {
         font-size: 1rem;
     }
 
-    .about-me-filho {
-        margin-left: -4.5rem;
-    }
-
     .projets-video {
         padding-left: 2rem;
         padding-right: 1rem;
@@ -556,10 +568,17 @@ header {
     .img-wrapper {
         height: 86%;
     }
+    .about-me-filho {
+        padding: 2rem 0rem 2rem 4rem;
+    }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 412px) {
     .banner {
        top: 15%;
        left: -.25rem;
     }
+    .about-me-filho {
+        padding: 2rem 0rem 2rem 3rem;
+    }
+}
